--- a/src/DrumBeatDesigner/MainWindow.xaml
+++ b/src/DrumBeatDesigner/MainWindow.xaml
@@ -89,7 +89,7 @@
                     </Button>
 
                     <Button Command="{Binding RenamePatternCommand}">
-                        Rename
+                        <Image Source="/Resources/Images/textfield_rename.png" Style="{StaticResource ToolbarImg}"/>
                     </Button>
 
                     <Separator/>
@@ -97,6 +97,12 @@
                     <Button Command="{Binding PlayOrStopSongCommand}">
                         <Image Source="{Binding SongPlayer.IsPlaying, Converter={StaticResource BoolPlayStopImageConverter}}"/>
                     </Button>
+
+                    <Label HorizontalContentAlignment="Right" 
+                           VerticalContentAlignment="Center">
+                        <TextBlock Text="{Binding SongPlayTime, StringFormat=mm\\:ss}" 
+                                   FontFamily="Consolas"/>
+                    </Label>
 
                     <Separator/>
 
@@ -128,7 +134,6 @@
                         </Style>
                     </ListBox.ItemContainerStyle>
                 </ListBox>
-
             </ScrollViewer>
 
             <ScrollViewer Name="uxPatternItems" 
@@ -158,7 +163,10 @@
                                                       HorizontalAlignment="Center"
                                                       HorizontalContentAlignment="Center"
                                                       Margin="2, 0, 2, 0"
-                                                      IsChecked="{Binding IsEnabled}" />
+                                                      IsChecked="{Binding IsEnabled}"
+                                                      IsEnabled="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, 
+                                                                     Path=DataContext.AreAnyPlayersPlaying, 
+                                                                     Converter={StaticResource InverseBoolConverter}}"/>
                                         </Border>
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
@@ -200,7 +208,7 @@
 
                         <Label HorizontalContentAlignment="Right" 
                            VerticalContentAlignment="Center">
-                            <TextBlock Text="{Binding PlayTime, StringFormat=mm\\:ss}" 
+                            <TextBlock Text="{Binding PatternPlayTime, StringFormat=mm\\:ss}" 
                                    FontFamily="Consolas"/>
                         </Label>
 
@@ -383,7 +391,7 @@
                                                           HorizontalContentAlignment="Center"
                                                           Margin="5, 0, 5, 0"
                                                           IsChecked="{Binding IsEnabled}"
-                                                          IsEnabled="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=ItemsControl, AncestorLevel=2}, 
+                                                          IsEnabled="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, 
                                                                      Path=DataContext.AreAnyPlayersPlaying, 
                                                                      Converter={StaticResource InverseBoolConverter}}">
                                                 </CheckBox>
