Fixed song export button disabled. Pattern export cleanup. Trying HighPrecisionTimer.

--- a/src/DrumBeatDesigner/MainWindow.xaml
+++ b/src/DrumBeatDesigner/MainWindow.xaml
@@ -115,6 +115,12 @@
                 </ToolBar>
             </ToolBarTray>
 
+            <ToolBarTray Grid.Row="0" Grid.Column="2">
+                <ToolBar>
+                    <Label Content="" />
+                </ToolBar>
+            </ToolBarTray>
+            
             <ScrollViewer Name="uxPatterns" Grid.Column="0" Grid.Row="1" 
                           Padding="0" Margin="0"
                           VerticalScrollBarVisibility="Hidden" 
@@ -165,8 +171,10 @@
                                                       Margin="2, 0, 2, 0"
                                                       IsChecked="{Binding IsEnabled}"
                                                       IsEnabled="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, 
-                                                                     Path=DataContext.AreAnyPlayersPlaying, 
-                                                                     Converter={StaticResource InverseBoolConverter}}"/>
+                                                                          Path=DataContext.AreAnyPlayersPlaying, 
+                                                                          Converter={StaticResource InverseBoolConverter}}"
+                                                      Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, 
+                                                                        Path=DataContext.PatternItemCheckCommand}"/>
                                         </Border>
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
